--- a/app/src/main/res/layout/activity_legal_license.xml
+++ b/app/src/main/res/layout/activity_legal_license.xml
@@ -25,23 +25,16 @@
             android:layout_marginTop="16dp" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             card_view:cardElevation="5dp"
             card_view:cardUseCompatPadding="true">
 
-            <TextView
+            <WebView
                 android:id="@+id/license_details"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:text="@string/legal_license_details"
-                android:textSize="16sp"
-                android:textColor="@color/text_color_primary"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp" />
+                android:layout_height="wrap_content"/>
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
