--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -1,21 +1,21 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- A 'parent' preference, which enables/disables child preferences (below)
-         when checked/unchecked. -->
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:defaultValue="true"
         android:key="notifications_enabled"
-        android:title="@string/enable_notifications" />
+        android:title="@string/enable_notifications"
+        app:iconSpaceReserved="false"/>
 
-
-    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:defaultValue="true"
         android:key="settings_location"
-        android:title="@string/access_location" />
+        android:title="@string/access_location"
+        app:iconSpaceReserved="false"/>
 
     <Preference
         android:key="language"
-        android:title="Language"/>
+        android:title="@string/language"
+        app:iconSpaceReserved="false"/>
 
 </PreferenceScreen>
