--- a/app/src/main/res/layout/activity_legal_libraries.xml
+++ b/app/src/main/res/layout/activity_legal_libraries.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,12 +42,11 @@
 
             </androidx.cardview.widget.CardView>
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/audiokit"
+            android:text="@string/jsyn_lib"
             android:textSize="18sp"
             android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
@@ -56,22 +54,20 @@
             android:layout_marginTop="16dp" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             card_view:cardElevation="5dp"
             card_view:cardUseCompatPadding="true">
 
-            <TextView
+            <WebView
+                android:id="@+id/jsyn_license"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/audiokit_license"
+                android:fontFamily="sans-serif"
                 android:textSize="16sp"
                 android:textColor="@color/text_color_primary"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp" />
+                android:layout_margin="16dp"/>
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
