--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -49,6 +49,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
+                android:gravity="center_horizontal"
                 android:layout_gravity="center_horizontal"
                 android:maxLines="1"
                 android:fontFamily="sans-serif-medium"
