--- a/app/src/main/res/layout/fragment_eclipse_center.xml
+++ b/app/src/main/res/layout/fragment_eclipse_center.xml
@@ -53,7 +53,7 @@
                 <include
                     android:id="@+id/eclipse_countdown"
                     layout="@layout/layout_countdown"
-                    android:visibility="visible"/>
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:focusable="true"
