--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -5,30 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        app:titleTextColor="@android:color/white">
-
-        <!--<TextView-->
-            <!--android:id="@+id/toolbar_title"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="48dp"-->
-            <!--android:textSize="18sp"-->
-            <!--android:fontFamily="sans-serif-condensed"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/title_media"-->
-            <!--android:contentDescription="@string/title_media"/>-->
-
-    </androidx.appcompat.widget.Toolbar>
-
+        app:titleTextColor="@android:color/white"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/ScrollView01"
@@ -57,7 +40,7 @@
                 android:fontFamily="sans-serif-condensed"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="@dimen/default_text_size"
                 android:gravity="center"
                 android:text="@string/upcoming_audio"/>
         </LinearLayout>
