--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.walkthrough.WalkthroughActivity">
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_alignParentStart="true"/>
 
     <ImageButton
         android:id="@+id/prev_button"
@@ -25,9 +23,9 @@
         android:layout_marginStart="8dp"
         android:contentDescription="@string/prev_page"
         android:scaleType="fitCenter"
-        android:tint="@color/colorAccent"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/ic_chevron_left" />
+        app:srcCompat="@drawable/ic_chevron_left"
+        app:tint="@color/colorAccent" />
 
     <ImageButton
         android:id="@+id/next_button"
@@ -39,22 +37,22 @@
         android:scaleType="fitCenter"
         android:contentDescription="@string/next_page"
         android:background="@android:color/transparent"
-        android:tint="@color/colorAccent"
-        app:srcCompat="@drawable/ic_chevron_right" />
+        app:srcCompat="@drawable/ic_chevron_right"
+        app:tint="@color/colorAccent" />
 
     <Button
         android:id="@+id/skip_close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/next_button"
-        android:background="@android:color/transparent"
+        android:layout_alignStart="@+id/next_button"
         android:layout_alignParentEnd="true"
-        android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/colorAccent"
-        android:gravity="top|center_horizontal"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/skip"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="top|center_horizontal"
         android:text="@string/skip"
         android:textAllCaps="false"
-        android:layout_alignStart="@+id/next_button" />
+        android:textColor="@color/colorAccent" />
 
 </RelativeLayout>
