--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -56,14 +56,15 @@
     <SeekBar
         android:id="@+id/audio_progress"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/default_button_size"
+        android:layout_marginBottom="-24dp"
         android:background="@null"
         android:progressDrawable="@drawable/seekbar_progress"
-        android:thumb="@drawable/seekbar_thumb"
+        android:thumb="@drawable/ic_seekbar_progress"
 
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/space"/>
+        app:layout_constraintBottom_toBottomOf="@id/eclipse_img"/>
 
     <ImageButton
         android:id="@+id/back_button"
@@ -87,11 +88,11 @@
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="@dimen/default_margin"
+        android:layout_marginBottom="4dp"
 
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/eclipse_img" />
+        app:layout_constraintBottom_toTopOf="@id/audio_progress"/>
 
     <TextView
         android:id="@+id/time_total"
@@ -100,63 +101,63 @@
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="@dimen/default_margin"
+        android:layout_marginBottom="4dp"
 
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/eclipse_img" />
+        app:layout_constraintBottom_toTopOf="@+id/audio_progress"/>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:importantForAccessibility="no"
-
-        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        android:orientation="vertical"
+        android:layout_marginStart="@dimen/default_margin"
+        android:layout_marginEnd="@dimen/default_margin"
+        app:layout_constraintTop_toBottomOf="@+id/audio_progress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
-        <LinearLayout
-            android:id="@+id/description_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/eclipse_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/default_margin"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/text_color_primary"
+            android:textSize="@dimen/title_text_size" />
 
-            <TextView
-                android:id="@+id/eclipse_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-medium"
-                android:textColor="@color/text_color_primary"
-                android:textSize="@dimen/title_text_size" />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="@dimen/default_margin"
+            android:background="@color/divider_color" />
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_margin="16dp"
-                android:background="@color/divider_color" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="1dp"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:importantForAccessibility="no">
 
             <TextView
                 android:id="@+id/eclipse_description"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/default_margin"
+                android:paddingBottom="@dimen/default_margin"
                 android:focusable="true"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/text_color_primary"
                 android:textSize="@dimen/default_text_size"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 tools:text="@string/totality_description"/>
 
 
-        </LinearLayout>
+        </ScrollView>
 
-    </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
