--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,11 @@
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="default_button_size">48dp</dimen>
 
     <dimen name="ma_list_item_edges_padding">16dp</dimen>
     <dimen name="ma_list_item_text_edge_padding_start">72dp</dimen>
@@ -19,5 +22,8 @@
     <dimen name="ma_divider_thickness_light">0.5dp</dimen>
 
     <dimen name="permission_dialog_width">300dp</dimen>
+
+    <dimen name="seekbar_size">16dp</dimen>
+    <dimen name="seekbar_border_width">1dp</dimen>
 
 </resources>
